--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -30,6 +30,8 @@
         android:id="@+id/tv_logOut_dashboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:clickable="true"
         android:text="Log Out"
         android:textColor="@android:color/white"
@@ -217,8 +219,8 @@
         android:id="@+id/tv_user_dashboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="4dp"
         android:clickable="true"
         android:gravity="center_horizontal"
