--- a/app/src/main/res/layout/activity_support2.xml
+++ b/app/src/main/res/layout/activity_support2.xml
@@ -133,78 +133,105 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_contact_number_support2" />
 
+    <ImageButton
+        android:id="@+id/iv_back_Support2"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="4dp"
+        app:backgroundTint="#093836"
+        app:layout_constraintBottom_toTopOf="@+id/guideline42"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.002"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.291"
+        app:srcCompat="@drawable/back_icon" />
+
     <ImageView
         android:id="@+id/iv_dashboard_bottom_support2"
         android:layout_width="53dp"
         android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="20dp"
         android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/home" />
 
     <ImageView
         android:id="@+id/iv_timetable_bottom_support2"
         android:layout_width="53dp"
         android:layout_height="35dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
-        app:layout_constraintStart_toEndOf="@+id/iv_dashboard_bottom_support2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.243"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
+        app:layout_constraintVertical_bias="0.35000002"
         app:srcCompat="@drawable/calendar" />
 
     <ImageView
         android:id="@+id/iv_library_bottom_support2"
         android:layout_width="53dp"
         android:layout_height="35dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
-        app:layout_constraintStart_toEndOf="@+id/iv_timetable_bottom_support2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.418"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
+        app:layout_constraintVertical_bias="0.35000002"
         app:srcCompat="@drawable/library_icon" />
 
     <ImageView
         android:id="@+id/iv_forum_bottom_support2"
         android:layout_width="53dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
-        app:layout_constraintStart_toEndOf="@+id/iv_market_bottom_support2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.807"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
+        app:layout_constraintVertical_bias="0.35000002"
         app:srcCompat="@drawable/forum" />
 
     <ImageView
         android:id="@+id/iv_market_bottom_support2"
         android:layout_width="53dp"
         android:layout_height="35dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
-        app:layout_constraintStart_toEndOf="@+id/iv_library_bottom_support2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.617"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
+        app:layout_constraintVertical_bias="0.35000002"
         app:srcCompat="@drawable/market" />
 
     <ImageView
         android:id="@+id/iv_moodle_bottom_support2"
         android:layout_width="53dp"
         android:layout_height="35dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginTop="20dp"
         android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_forum_bottom_support2"
+        app:layout_constraintHorizontal_bias="0.986"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline43"
+        app:layout_constraintVertical_bias="0.111"
         app:srcCompat="@drawable/moodle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
