--- a/app/src/main/res/layout/activity_post_review.xml
+++ b/app/src/main/res/layout/activity_post_review.xml
@@ -8,6 +8,18 @@
     android:background="@drawable/pop_bg"
     tools:context=".View.Post_review">
 
+    <TextView
+        android:id="@+id/tv_error_postRev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please write your review before posting"
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline29" />
+
     <EditText
         android:id="@+id/et_review_postRev"
         android:layout_width="192dp"
