--- a/app/src/main/res/layout/activity_send_msg.xml
+++ b/app/src/main/res/layout/activity_send_msg.xml
@@ -24,6 +24,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline29" />
 
+    <TextView
+        android:id="@+id/tv_error_sendMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Please type your message before sending"
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_msgTo_sendMsg" />
+
     <Button
         android:id="@+id/btn_send_sendMsg"
         android:layout_width="118dp"
