--- a/app/src/main/res/layout/activity_add_forum_comment.xml
+++ b/app/src/main/res/layout/activity_add_forum_comment.xml
@@ -8,6 +8,18 @@
     android:background="@drawable/pop_bg"
     tools:context=".View.AddForumComment">
 
+    <TextView
+        android:id="@+id/tv_error_newCom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please write your comment before posting"
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline29" />
+
     <EditText
         android:id="@+id/et_comment_newCom"
         android:layout_width="241dp"
@@ -28,7 +40,7 @@
         android:id="@+id/btn_publish_newCom"
         android:layout_width="118dp"
         android:layout_height="29dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/roundbutton"
         android:text="Publish"
         android:textColor="@color/white"
@@ -50,16 +62,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.17" />
+        app:layout_constraintGuide_begin="67dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_end="127dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline31"
