--- a/app/src/main/res/layout/activity_book_for_sale_detail.xml
+++ b/app/src/main/res/layout/activity_book_for_sale_detail.xml
@@ -90,6 +90,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:tint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?attr/homeAsUpIndicator" />
