--- a/app/src/main/res/layout/activity_new_topic.xml
+++ b/app/src/main/res/layout/activity_new_topic.xml
@@ -23,15 +23,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline29" />
 
+    <TextView
+        android:id="@+id/tv_error_newTopic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Please write Subject and Description\n  before publishing"
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_desc_newTopic" />
+
     <Button
         android:id="@+id/btn_publish_newTopic"
         android:layout_width="118dp"
         android:layout_height="29dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/roundbutton"
         android:text="Publish"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline30" />
 
