--- a/app/src/main/res/layout/mybooks_recview_card.xml
+++ b/app/src/main/res/layout/mybooks_recview_card.xml
@@ -6,10 +6,18 @@
     android:paddingVertical="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/recycler_view_bg"
-    android:padding="4dp"
+    android:elevation="3dp"
     android:layout_marginTop="5dp">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/pop_bg"
+        android:padding="5dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     <ImageView
         android:id="@+id/iv_bookImage_mybooks"
@@ -17,83 +25,92 @@
         android:layout_height="146dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center"
-        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_title_mybooks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="20dp"
-        android:padding="3dp"
-        android:text="Title"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_title_mybooks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="13dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/iv_bookImage_mybooks"
+            android:layout_toRightOf="@+id/iv_bookImage_mybooks"
+            android:padding="3dp"
+            android:text="Title"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_isavaiable_mybooks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_author_mybooks"
-        android:layout_gravity="center"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="4dp"
-        android:padding="3dp"
-        android:text="Available"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
-        app:layout_constraintTop_toBottomOf="@+id/tv_category_mybooks" />
+        <TextView
+            android:id="@+id/tv_isavaiable_mybooks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_author_mybooks"
+            android:layout_gravity="center"
+            android:layout_marginStart="13dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/iv_bookImage_mybooks"
+            android:layout_toRightOf="@+id/iv_bookImage_mybooks"
+            android:padding="3dp"
+            android:text="Available"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
+            app:layout_constraintTop_toBottomOf="@+id/tv_category_mybooks" />
 
-    <TextView
-        android:id="@+id/tv_category_mybooks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_isavaiable_mybooks"
-        android:layout_gravity="center"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="4dp"
-        android:padding="3dp"
-        android:text="Category"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
-        app:layout_constraintTop_toBottomOf="@+id/tv_author_mybooks" />
+        <TextView
+            android:id="@+id/tv_category_mybooks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_isavaiable_mybooks"
+            android:layout_gravity="center"
+            android:layout_marginStart="13dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/iv_bookImage_mybooks"
+            android:layout_toRightOf="@+id/iv_bookImage_mybooks"
+            android:padding="3dp"
+            android:text="Category"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
+            app:layout_constraintTop_toBottomOf="@+id/tv_author_mybooks" />
 
-    <TextView
-        android:id="@+id/tv_author_mybooks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/title_book_sale"
-        android:layout_gravity="center"
-
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="4dp"
-        android:padding="3dp"
-        android:text="Author"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title_mybooks" />
+        <TextView
+            android:id="@+id/tv_author_mybooks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_title_mybooks"
+            android:layout_gravity="center"
+            android:layout_marginStart="13dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/iv_bookImage_mybooks"
+            android:layout_toRightOf="@+id/iv_bookImage_mybooks"
+            android:padding="3dp"
+            android:text="Author"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/iv_bookImage_mybooks"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title_mybooks" />
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
