--- a/app/src/main/res/layout/activity_book_for_sale_detail.xml
+++ b/app/src/main/res/layout/activity_book_for_sale_detail.xml
@@ -42,10 +42,13 @@
         android:id="@+id/tv_desc_bfsDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="16dp"
         android:inputType="textMultiLine"
+        android:layout_marginStart="20dp"
         android:text="Description"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_cat_bfsDetails" />
 
