Notification system now fully working

--- a/app/src/main/res/layout/activity_web_viwer.xml
+++ b/app/src/main/res/layout/activity_web_viwer.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_dashboard"
+    android:background="#063532"
     tools:context=".View.WebViewer">
 
     <WebView
         android:id="@+id/web"
         android:layout_width="402dp"
         android:layout_height="574dp"
+        android:background="#063532"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
